--- a/la ultima fortaleza.html
+++ b/la ultima fortaleza.html
@@ -9,7 +9,12 @@
       }
     </style>
   <title>La Última fortaleza </title>
+  <!--h1 is head 1 and i1 is image 1-->
   <h1>Esta es la beta de la pagina de:  </h1>
   <h2> La Última Fortaleza </h2>
 </head>
+<body>
+  <!--la variable "facebook"es un botón que te manda al facebook de la ultima fortaleza-->
+  <facebook>  <a  target="_blank" href="https://www.facebook.com/laultima.fortaleza">  <img src="https://banner2.kisspng.com/20171216/213/facebook-logo-png-5a35528eaa4f08.7998622015134439826976.jpg"> </a> </facebook>
+</body>
 </html>
