modificacion al boton (Achicado)

--- a/la ultima fortaleza.html
+++ b/la ultima fortaleza.html
@@ -8,13 +8,16 @@
 
       }
     </style>
-  <title>La Última fortaleza </title>
+  <title>La Ultima fortaleza </title>
   <!--h1 is head 1 and i1 is image 1-->
   <h1>Esta es la beta de la pagina de:  </h1>
   <h2> La Última Fortaleza </h2>
 </head>
 <body>
+   <p1>Visitá nuestras redes sociales:
+   </p1>
   <!--la variable "facebook"es un botón que te manda al facebook de la ultima fortaleza-->
-  <facebook>  <a  target="_blank" href="https://www.facebook.com/laultima.fortaleza">  <img src="https://banner2.kisspng.com/20171216/213/facebook-logo-png-5a35528eaa4f08.7998622015134439826976.jpg"> </a> </facebook>
+  <facebook>  <a  target="_blank" href="https://www.facebook.com/laultima.fortaleza">  <img src="https://banner2.kisspng.com/20171216/213/facebook-logo-png-5a35528eaa4f08.7998622015134439826976.jpg"alt="facebook" style="width:50px;height:50px;"> </a> </facebook>
+
 </body>
 </html>
