fondo negro. font arreglado

--- a/la ultima fortaleza.html
+++ b/la ultima fortaleza.html
@@ -2,10 +2,20 @@
 <html>
   <head>
     <style>
+    body{
+      background-color: black;
+
+    }
       h2{
         font-size: 100px;
-        font-style: italic;
+        color: white;
 
+      }
+      h1{
+        color: white;
+      }
+      p1{
+      color: white; 
       }
     </style>
   <title>La Ultima fortaleza </title>
